[gd_scene load_steps=4 format=3 uid="uid://bcnmkworemer0"]

[ext_resource type="Theme" uid="uid://blu2ho5t3snyv" path="res://MainTheme.tres" id="1_c3dpk"]
[ext_resource type="Script" path="res://Scenes/MainMenu/MainMenu.gd" id="2_0mkxh"]
[ext_resource type="Texture2D" uid="uid://c2smpddvn47d0" path="res://Sprites/titleScreen.png" id="3_f0ads"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_c3dpk")
script = ExtResource("2_0mkxh")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_f0ads")

[node name="M" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.5
offset_top = -47.0
offset_right = 35.5
grow_horizontal = 2
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="M"]
layout_mode = 2
alignment = 1

[node name="PlayButton" type="Button" parent="M/VBox"]
layout_mode = 2
text = "Play !"

[node name="CreditsButton" type="Button" parent="M/VBox"]
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="M/VBox"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="M/VBox/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="M/VBox/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="M/VBox/QuitButton" to="." method="_on_quit_button_pressed"]
